--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="#" class="btn">Download CV</a>
+                                            <a href="Resume.pdf"download="Aryan_Hulawale_CV.pdf" class="btn">Download CV</a>
                                             <a href="#contact" class="btn hire-me">Hire Me</a>
                                         </div>
                                     </div>
@@ -471,4 +471,5 @@
 </body>
 
 </html>
+
 
